--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="insert">
 
-        <div class="key">
+        <div class="key">Press Any Key
         </div>
     </div>
     <script src="script.js"></script>
